gen/videointelligence/v1/generator-errors.log
    Blocking waiting for file lock on build directory
    Checking google-videointelligence1 v0.1.0 (/Users/sthiel/dev/google-apis/generated/gen/videointelligence/v1/lib)
error[E0423]: expected value, found struct `projects::ProjectsActions`
    --> gen/videointelligence/v1/lib/src/lib.rs:4308:13
     |
4308 |             projects::ProjectsActions
     |             ^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `projects::ProjectsActions { /* fields */ }`?

error[E0423]: expected value, found struct `locations::LocationsActions`
    --> gen/videointelligence/v1/lib/src/lib.rs:4320:17
     |
4320 |                 locations::LocationsActions
     |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `locations::LocationsActions { /* fields */ }`?

error[E0423]: expected value, found struct `operations::OperationsActions`
    --> gen/videointelligence/v1/lib/src/lib.rs:4332:21
     |
4332 |                     operations::OperationsActions
     |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `operations::OperationsActions { /* fields */ }`?

error[E0423]: expected value, found struct `locations::LocationsActions`
    --> gen/videointelligence/v1/lib/src/lib.rs:4806:13
     |
4806 |             locations::LocationsActions
     |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `locations::LocationsActions { /* fields */ }`?

error[E0423]: expected value, found struct `operations::OperationsActions`
    --> gen/videointelligence/v1/lib/src/lib.rs:4818:17
     |
4818 |                 operations::OperationsActions
     |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `operations::OperationsActions { /* fields */ }`?

warning: unreachable expression
  --> gen/videointelligence/v1/lib/src/lib.rs:58:13
   |
58 | /             Ok(match value {
59 | |                 _ => {
60 | |                     return Err(::serde::de::Error::custom(format!(
61 | |                         "invalid enum for #name: {}",
...  |
64 | |                 }
65 | |             })
   | |______________^
   |
   = note: #[warn(unreachable_code)] on by default

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0423`.
error: Could not compile `google-videointelligence1`.

To learn more, run the command again with --verbose.
